# fastapi-boilerplate

./: .env.example  .gitignore  .gitignore copy  .pylintrc  Makefile  README.md  main.py  pyproject.toml
migrations/: env.py
src/app/: __init__.py
src/app/auth/: api.py  queries.py  schemas.py
src/app/moods/: api.py  models.py  queries.py  schemas.py
src/app/users/: api.py  models.py  queries.py  schemas.py
src/core/: api.py  queries.py  schemas.py  server.py
src/core/cache/: redis_backend.py
src/core/config/: __init__.py  base.py  database.py  worker.py
src/core/database/: __init__.py  base.py  schemas.py  session.py  standalone_session.py  transactional.py
src/core/dependencies/: authentication.py  current_user.py  permissions.py
src/core/exceptions/: base.py
src/core/factory/: factory.py
src/core/middlewares/: authentication.py  response_logger.py  sqlalchemy.py
src/core/security/: jwt.py  password.py
src/core/worker/: __init__.py
tests/: conftest.py
tests/api/: conftest.py
tests/api/v1/monitoring/: test_health.py
tests/api/v1/moods/: test_moods.py
tests/api/v1/users/: test_users.py
tests/core/queries/: test_base.py
tests/core/security/: test_access_control.py  test_jwt_handler.py  test_password.py
tests/factory/: moods.py  users.py
tests/utils/: login.py
